--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -4,10 +4,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="test">
-      <h1 id="header">UNRECOGNIZED</h1>
+    <div class="main">
       <video id="video"></video>
-      <canvas id="canvas"></canvas>
+      <canvas style="display:none" id="canvas"></canvas>
       <button id="startbutton">Verify</button>
     </div>
 
